--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,3 @@
-
 @font-face {
     font-family: 'BlackChancery';
     src: url('/assets/font/BLKCHCRY.TTF') format('truetype');
@@ -22,4 +21,33 @@ body {
     background-position: center;
     color: #d4af37;
     cursor: url(https://cur.cursors-4u.net/sports/spo-1/spo15.cur), auto !important;
+}
+
+h1 {
+    position: absolute;
+    top: 20vh;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 3em;
+    margin: 0;
+    text-shadow: 2px 2px 4px #000000;
+    font-weight: bold;
+    letter-spacing: 2px;
+    text-align: center;
+}
+
+.game-container {
+    background-color: rgba(0, 0, 0, 0.8);
+    padding: 20px;
+    width: 100%;
+    box-sizing: border-box;
+    transition: opacity 0.5s ease-in-out;
+    opacity: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+}
+
+.game-container.show {
+    opacity: 1;
 }
