--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,3 +105,15 @@ button:hover {
     background-color: rgba(165, 42, 42, 0.9);
     transform: translate(-50%, -50%) scale(1.1);
 }
+
+.health-container {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+.health {
+    font-size: 2.5em;
+    text-shadow: 1px 1px 2px #000000;
+}
