--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,3 +117,39 @@ button:hover {
     font-size: 2.5em;
     text-shadow: 1px 1px 2px #000000;
 }
+
+#gameMessage {
+    font-size: 1.8em;
+    text-align: center;
+    font-style: italic;
+    margin-top: 20px;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+#gameMessageDragon, #gameMessagePlayer {
+    font-size: 2.8em;
+    text-align: center;
+    font-style: italic;
+    margin-top: 20px;
+    max-width: 100%;
+    color: #a52a2a;
+    margin: 10px 0;
+    padding: 10px;
+    border-radius: 5px;
+    font-family: 'Pirata One', serif;
+    background-color: rgba(1, 0, 0, 0.5);
+    animation: shake 0.5s;
+    animation-iteration-count: 1;
+    display: inline-block;
+    
+}
+
+#gameMessagePlayer {
+    color: #ffd700; /* Gold color for player */
+   
+}
+
+#gameMessageDragon {
+    color: #ff4500; /* Orange-red color for dragon */
+   
+}
