--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,11 +52,72 @@ h1 {
     opacity: 1;
 }
 
+.health-container {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+.health {
+    font-size: 2.5em;
+    text-shadow: 1px 1px 2px #000000;
+}
+
 .button-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-bottom: 20px;
+}
+
+.message-container {
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    flex-direction: column;
+    align-self: center;
+    position: absolute;
+    top: 40%;
+    width: 100%;
+    overflow: hidden;
+}
+
+#gameMessage {
+    font-size: 1.8em;
+    text-align: center;
+    font-style: italic;
+    margin-top: 20px;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+#gameMessageDragon,
+#gameMessagePlayer {
+    font-size: 2.8em;
+    text-align: center;
+    font-style: italic;
+    margin-top: 20px;
+    max-width: 100%;
+    color: #a52a2a;
+    margin: 10px 0;
+    padding: 10px;
+    border-radius: 5px;
+    font-family: 'Pirata One', serif;
+    background-color: rgba(1, 0, 0, 0.5);
+    animation: shake 0.5s;
+    animation-iteration-count: 1;
+    display: inline-block;
+
+}
+
+#gameMessagePlayer {
+    color: #ffd700;
+    /* Gold color for player */
+
+}
+
+#gameMessageDragon {
+    color: #ff4500;
+    /* Orange-red color for dragon */
+
 }
 
 button {
@@ -106,50 +167,6 @@ button:hover {
     transform: translate(-50%, -50%) scale(1.1);
 }
 
-.health-container {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    margin-bottom: 20px;
-}
-
-.health {
-    font-size: 2.5em;
-    text-shadow: 1px 1px 2px #000000;
-}
-
-#gameMessage {
-    font-size: 1.8em;
-    text-align: center;
-    font-style: italic;
-    margin-top: 20px;
-    background-color: rgba(0, 0, 0, 0.5);
-}
-
-#gameMessageDragon, #gameMessagePlayer {
-    font-size: 2.8em;
-    text-align: center;
-    font-style: italic;
-    margin-top: 20px;
-    max-width: 100%;
-    color: #a52a2a;
-    margin: 10px 0;
-    padding: 10px;
-    border-radius: 5px;
-    font-family: 'Pirata One', serif;
-    background-color: rgba(1, 0, 0, 0.5);
-    animation: shake 0.5s;
-    animation-iteration-count: 1;
-    display: inline-block;
-    
-}
-
-#gameMessagePlayer {
-    color: #ffd700; /* Gold color for player */
-   
-}
-
-#gameMessageDragon {
-    color: #ff4500; /* Orange-red color for dragon */
-   
+* {
+    cursor: url(https://cur.cursors-4u.net/sports/spo-1/spo15.cur), auto !important;
 }
